Fixed  logo not wrapping on small devices
Reduced font size for sub-navigation on documentation

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -71,9 +71,9 @@ h3 {
 
 span.redmine-boost-text {
   display: inline-block;
-  width: max-content;
   letter-spacing: -0.05em;
   font-weight: bold;
+  overflow-wrap: anywhere;
 
   span.redmine {
     color: $primary-accent-color;
@@ -101,7 +101,7 @@ nav {
     flex-wrap: wrap;
     justify-content: center;
     text-align: center;
-    gap: 2rem;
+    gap: 0.5rem 2rem;
     padding-inline-start: 0rem;
     li {
       display: inline-block;
@@ -683,23 +683,14 @@ div.documentation {
       border-radius: .2em;
     }
   }
-
+  
   nav {
     margin-bottom: 0rem;
     ul {
       margin-block: 0rem 0rem;
-      flex-direction: row;
-      flex-wrap: wrap;
-      gap: 2rem ;
       li {
-        text-align: left;
-        font-size: 1.2rem;
+        font-size: 1.1rem;
       }
-    }
-  }
-  ul {
-    li {
-      padding: 0.3rem;
     }
   }
   
